# delegate-shell

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
bench/: bench.dgsh  bench.js  bench.nu  bench.py  bench.sh  complex.dgsh  complex.js  complex.py  complex.sh  fibonacci.dgsh  fibonacci.js  fibonacci.nu  fibonacci.py  fibonacci.sh  full_bench.dgsh  matrix.dgsh  matrix.js  matrix.nu  matrix.py  matrix.sh  stress.dgsh  stress.js  stress.py  wordcount.dgsh  wordcount.js  wordcount.nu  wordcount.py  wordcount.sh
examples/: base64.dgsh  deploy_check.dgsh  showcase.md
src/: errors.rs  ffi.rs  lib.rs  main.rs
src/aot/: codegen.rs  linker.rs  mod.rs  runtime_helpers.rs
src/builtins/: collections.rs  datetime.rs  dispatch.rs  fileio.rs  filesystem.rs  formats.rs  hashing.rs  io.rs  math.rs  mod.rs  network.rs  process.rs  registry.rs  strings.rs  system.rs  terminal.rs  threads.rs  types.rs
src/exec/: command.rs  mod.rs
src/interpreter/: engine.rs  env.rs  mod.rs  value.rs
src/lexer/: indent.rs  mod.rs  scanner.rs  token.rs
src/migrate/: converter.rs  mod.rs
src/parser/: ast.rs  expr.rs  mod.rs  stmt.rs
src/shell/: completion.rs  highlight.rs  jobs.rs  mcp.rs  mod.rs  rc.rs  repl.rs
src/vm/: auto_mode.rs  bytecode.rs  compiler.rs  jit.rs  machine.rs  mod.rs
tests/: access_test.rs
tests/scripts/: assign_test.dgsh  basic.dgsh  collections_test.dgsh  control_flow.dgsh  datetime_test.dgsh  else_if_test.dgsh  fileio_test.dgsh  filesystem_test.dgsh  formats_network_test.dgsh  full_test.dgsh  imported.dgsh  test1.dgsh  (+11 more)
