[package]
name = "delegate-shell"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dgsh"
path = "src/main.rs"

[lib]
name = "delegate_shell"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.44"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
hostname = "0.4.2"
indexmap = "2.13.0"
regex = "1.12.3"
rustyline = "17.0.2"
rustyline-derive = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
toml = "1.0.7"
ureq = "3.2.0"
